--- a/.github/workflows/wiki.yaml
+++ b/.github/workflows/wiki.yaml
@@ -14,5 +14,8 @@ jobs:
   publish-wiki:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v3
+      - uses: actions/checkout@v6
+      
       - uses: Andrew-Chen-Wang/github-wiki-action@v4
+        with:
+            path: ./wiki
