feat: autogeneration of source an output

--- a/.github/workflows/wiki.yaml
+++ b/.github/workflows/wiki.yaml
@@ -4,6 +4,7 @@ on:
     branches: [main]
     paths:
       - wiki/**
+      - cmd/wiki/**
       - .github/workflows/publish-wiki.yml
 concurrency:
   group: publish-wiki
